--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "router-view",
-  "version": "1.1.7",
+  "name": "router-as-view",
+  "version": "1.2.0",
   "description": "Router view for React",
   "main": "./lib/addressbar",
   "scripts": {
@@ -13,7 +13,7 @@
     "react-component"
   ],
   "devDependencies": {
-    "actions-recorder": "1.1.1",
+    "actions-in-recorder": "1.7.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
     "colors": "^1.1.2",
@@ -23,7 +23,9 @@
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
     "json-loader": "^0.5.3",
+    "keycode": "^2.1.4",
     "origami-ui": "0.0.2",
+    "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
     "rsyncwrapper": "^0.4.2",
     "run-sequence": "^1.0.2",
@@ -35,14 +37,15 @@
   },
   "dependencies": {
     "immutable": "^3.7.5",
-    "react": ">=0.13.3"
+    "react": ">=0.13.3",
+    "react-addons-pure-render-mixin": "^15.3.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/teambition/router-view.git"
+    "url": "https://github.com/react-china/router-as-view.git"
   },
   "bugs": {
-    "url": "https://github.com/teambition/router-view/issues"
+    "url": "https://github.com/react-china/router-as-view/issues"
   },
   "homepage": "http://router-view.mvc-works.org/"
 }
