--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^0.8.4",
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
+    "immutable-devtools": "0.0.7",
     "json-loader": "^0.5.3",
     "keycode": "^2.1.4",
     "origami-ui": "0.0.2",
